--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
-Flask==3.0.3
-google-cloud-firestore
-google-auth
-gspread
-pandas
-requests
-urllib3
-charset-normalizer
-ftfy
+google-api-python-client>=2.147.0
+google-auth>=2.35.0
+google-auth-httplib2>=0.2.0
+google-auth-oauthlib>=1.2.1
+google-cloud-firestore>=2.16.0
+google-cloud-core>=2.4.1
+google-api-core>=2.19.2
+requests>=2.32.3
+charset-normalizer>=3.3.2
+ftfy>=6.2.0
+pandas>=2.2.2
