--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
 google-api-python-client>=2.147.0
-google-auth>=2.35.0
+google-auth>=2.33.0
 google-auth-httplib2>=0.2.0
 google-auth-oauthlib>=1.2.1
 google-cloud-firestore>=2.16.0
 google-cloud-core>=2.4.1
 google-api-core>=2.19.2
-requests>=2.32.3
+requests>=2.31.0
 charset-normalizer>=3.3.2
-ftfy>=6.2.0
+ftfy>=6.1.3
 pandas>=2.2.2
+urllib3>=2.2.0
+python-dateutil>=2.9.0.post0
+httplib2>=0.22.0
